class BookService:
    def addBook():
        pass
    #PLACEHOLDER

    def updateBook():
        pass
    #PLACEHOLDER

    def removeBook():
        pass
    #PLACEHOLDER

    def searchBook():
        pass
    #PLACEHOLDER

    def checkAvailability():
        pass
    #PLACEHOLDER